tests/negative/parser/chained_comparison.orng
// chained_comparison.orng:6:20: error: expected a semicolon or a newline here, got `>`
//     let x = 4 > 5 > 6
//                   ^
// 
fn main() -> Int {
    let x = 4 > 5 > 6
    if x {
        13
    } else {
        14
    }
}